[project]
name = "movie"
version = "0.4.1"
description = "Default template for PDM package"
authors = [
    {name = "stundrg", email = "khr0106@naver.com"},
]
dependencies = ["requests>=2.32.3", "pyarrow>=19.0.1", "pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
note = [
    "jupyterlab>=4.3.5",
]
